--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        
+        <title>Muscle Trivia</title>
+        <link rel="stylesheet" href="style.css">
 	</head>
-	<body></body>
+	<body>
+        <main>
+        <h1>Name Those Muscles</h1>
+        <button class='startButton'>Start</button>
+        
+        <script src="script.js"></script>
+        </main>
+    </body>
 </html>
