--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<main>
-			<div>
-                <h1 class="mainHeader">Name Those Muscles</h1>
-                <button class="startButton" onclick = "randomDraw()">Start</button>
-                
+		<h1 id="title">Welcome to "Muscles: The Game"</h1>
+		<h4>
+			Click below to test your knowledge on muscles of the body, and respond
+			with the correct muscle to the action
+		</h4>
+		<div class="flashCard">
+			<h1 class="mainHeader">Name Those Muscles</h1>
 
-				<script src="script.js"></script>
-			</div>
-		</main>
+			<input type="text" class="userInput" 
+			id= "inputField"
+			placeholder="Answer" /><br /><br />
+			<button class="startButton">Start</button>
+			<button class="submitButton">Submit</button>
+		</div>
+
+		<script src="script.js"></script>
 	</body>
 </html>
