Random Draw and Input Field Function

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 		<div class="flashCard">
 			<h1 class="mainHeader">Name Those Muscles</h1>
 
-			<input type="text" class="userInput" 
-			id= "inputField"
-			placeholder="Answer" /><br /><br />
+			<input
+				type="text"
+				class="userInput"
+				id="inputField"
+				placeholder="Answer"
+			/><br /><br />
 			<button class="startButton">Start</button>
 			<button class="submitButton">Submit</button>
 		</div>
