--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
 
 		<title>Muscle Trivia</title>
 		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Londrina+Shadow"
+			rel="stylesheet"
+			type="text/css"
+		/>
 	</head>
 	<body>
-		<h1 id="title">Welcome to "Muscles: The Game"</h1>
+		<h1 id="title">Welcome to <br />"Muscles: The Game"</h1>
 		<h4>
-			Click below to test your knowledge on muscles of the body, and respond
-			with the correct muscle to the action
+			Click below to test your knowledge on muscles of the body!! <br />
+			And then, just like a test, we'll let you know how you did afterwards.
+			<br />Good Luck!!
 		</h4>
 		<div class="flashCard">
-			<h1 class="mainHeader">Name Those Muscles</h1>
+			<h1 class="mainHeader">Name Those Muscles!!</h1>
 
 			<input
 				type="text"
@@ -25,7 +31,6 @@
 			<button class="startButton">Start</button>
 			<button class="submitButton">Submit</button>
 		</div>
-		
 
 		<script src="script.js"></script>
 	</body>
