--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<body>
 		<h1 id="title">Welcome to <br />"Muscles: The Game"</h1>
 		<h4>
-			Click below to test your knowledge on muscles of the body!! <br />
-			And then, just like a test, we'll let you know how you did afterwards.
+			Click below to test your knowledge of muscles of the body!! <br />
+			Just like a test, we'll let you know how you did afterwards.
 			<br />Good Luck!!
 		</h4>
 		<div class="flashCard">
