completed MVP, added bones function

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 				id="inputField"
 				placeholder="Answer"
 			/><br /><br />
-			<button class="startButton">Start</button>
-			<button class="submitButton">Submit</button>
+			<input type="submit" class="startButton" value="Start"></input>
+			<input type="submit" class="musclesButton"value="Muscles"></input>
+			<input type="submit" class="bonesButton"value="Bones"></input>
+			<input type="submit" class="submitButtonMuscles"value="Next"></input>
+
+			<input type="submit" class="submitButtonBones"value="Next"></input>
 		</div>
 
 		<script src="script.js"></script>
