change string for headers

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		/>
 	</head>
 	<body>
-		<h1 id="title">Welcome to <br />"Muscles: The Game"</h1>
+		<h1 id="title">Welcome to <br />"Anatomy: The Game"</h1>
 		<h4>
-			Click below to test your knowledge of muscles of the body!! <br />
+			Click below to test your knowledge of different systems of the body!! <br />
 			Just like a test, we'll let you know how you did afterwards.
 			<br />Good Luck!!
 		</h4>
