--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 		/>
 	</head>
 	<body>
-		<h1 id="title">Welcome to <br />"Anatomy: The Game"</h1>
+		<h1 id="title">Welcome to <br />"Anatomy Trivia: The Game"</h1>
 		<h4>
 			Click below to test your knowledge of different systems of the body!! <br />
 			Just like a test, we'll let you know how you did afterwards.
 			<br />Good Luck!!
 		</h4>
 		<div class="flashCard">
-			<h1 class="mainHeader">Name Those Muscles!!</h1>
+			<h1 class="mainHeader">Quiz Your Knowledge</h1>
 
 			<input
 				type="text"
